# superpixels-revisited

./: .gitmodules  .traivs.yml  CMakeLists.txt  README.md
cis_cli/: CMakeLists.txt  main.cpp
crs_cli/: CMakeLists.txt  main.cpp
ers_cli/: CMakeLists.txt  main.cpp
fh_cli/: CMakeLists.txt  main.cpp
lib_cis/: CMakeLists.txt  Makefile  README.TXT  README.md  changes.txt  energy.h  energy.h~  graph.cpp  graph.h  instances.inc  maxflow.cpp  superpixels.cpp  superpixels.h
lib_cis/vlib/: CMakeLists.txt
lib_cis/vlib/include/: canny.h  chamfer.h  convolve.h  draw.h  dt.h  features_.h  filter.h  grad.h  image.h  imconv.h  imutil.h  matrix.h  misc.h  morph.h  pnmfile.h  point.h  pyramid.h  sample.h  steer.h
lib_cis/vlib/utils/: Makefile  canny.cpp  dilate.cpp  dt.cpp  grad.cpp  pyramid.cpp  smooth.cpp
lib_crs/: ContourRelaxation.h  DepthFeature.h  README.md  contourRelaxedSuperpixels.cpp
lib_ers/: CMakeLists.txt  README.md  README.txt
lib_fh/: README.md
lib_pb/: CMakeLists.txt  README.md  README.txt  SuperPB.cpp  step-by-step.txt
lib_pb/Elimination/: CMakeLists.txt  LazyElimination.h  exampleElimination.cc
lib_pb/MaxFlow/: CMakeLists.txt  Makefile  QPBO_Elim.cc  QPBO_Generic.h  QPBO_LazyElim.cc  QPBO_MaxFlow.cc  example.cpp
lib_seeds/: CMakeLists.txt  README.md  seeds2.cpp  seeds2.h
lib_slic/: CMakeLists.txt  README.md  SLIC.cpp  SLIC.h  USAGE_SLIC.txt
pb_cli/: CMakeLists.txt  main.cpp
seeds_cli/: CMakeLists.txt  main.cpp
slic_cli/: CMakeLists.txt  main.cpp
vlfeat_slic_cli/: CMakeLists.txt  main.cpp
